docs/api/qiskit/0.29/qiskit.circuit.library.ZZFeatureMap.mdx
---
title: ZZFeatureMap (v0.29)
description: API reference for qiskit.circuit.library.ZZFeatureMap in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.ZZFeatureMap
---

# ZZFeatureMap

<Class id="qiskit.circuit.library.ZZFeatureMap" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/data_preparation/zz_feature_map.py" signature="ZZFeatureMap(feature_dimension, reps=2, entanglement='full', data_map_func=None, insert_barriers=False, name='ZZFeatureMap')" modifiers="class">
  Bases: `qiskit.circuit.library.data_preparation.pauli_feature_map.PauliFeatureMap`

  Second-order Pauli-Z evolution circuit.

  For 3 qubits and 1 repetition and linear entanglement the circuit is represented by:

  ```python
  ┌───┐┌─────────────────┐
  ┤ H ├┤ U1(2.0*φ(x[0])) ├──■────────────────────────────■────────────────────────────────────
  ├───┤├─────────────────┤┌─┴─┐┌──────────────────────┐┌─┴─┐
  ┤ H ├┤ U1(2.0*φ(x[1])) ├┤ X ├┤ U1(2.0*φ(x[0],x[1])) ├┤ X ├──■────────────────────────────■──
  ├───┤├─────────────────┤└───┘└──────────────────────┘└───┘┌─┴─┐┌──────────────────────┐┌─┴─┐
  ┤ H ├┤ U1(2.0*φ(x[2])) ├──────────────────────────────────┤ X ├┤ U1(2.0*φ(x[1],x[2])) ├┤ X ├
  └───┘└─────────────────┘                                  └───┘└──────────────────────┘└───┘
  ```

  where `φ` is a classical non-linear function, which defaults to `φ(x) = x` if and `φ(x,y) = (pi - x)(pi - y)`.

  **Examples**

  ```python
  >>> prep = ZZFeatureMap(2, reps=2)
  >>> print(prep)
       ┌───┐┌──────────────┐
  q_0: ┤ H ├┤ U1(2.0*x[0]) ├──■───────────────────────────────────────■──
       ├───┤├──────────────┤┌─┴─┐┌─────────────────────────────────┐┌─┴─┐
  q_1: ┤ H ├┤ U1(2.0*x[1]) ├┤ X ├┤ U1(2.0*(pi - x[0])*(pi - x[1])) ├┤ X ├
       └───┘└──────────────┘└───┘└─────────────────────────────────┘└───┘
  ```

  ```python
  >>> from qiskit.circuit.library import EfficientSU2
  >>> classifier = ZZFeatureMap(3) + EfficientSU2(3)
  >>> classifier.num_parameters
  15
  >>> classifier.parameters  # 'x' for the data preparation, 'θ' for the SU2 parameters
  {Parameter(θ[9]), Parameter(θ[4]), Parameter(θ[6]), Parameter(θ[1]), Parameter(x[2]),
  Parameter(θ[7]), Parameter(x[1]), Parameter(θ[8]), Parameter(θ[2]), Parameter(θ[10]),
  Parameter(θ[5]), Parameter(θ[0]), Parameter(θ[3]), Parameter(x[0]), Parameter(θ[11])}
  >>> classifier.count_ops()
  OrderedDict([('u1', 12), ('cx', 12), ('ry', 12), ('cz', 9), ('h', 6)])
  ```

  Create a new second-order Pauli-Z expansion.

  **Parameters**

  *   **feature\_dimension** (`int`) – Number of features.
  *   **reps** (`int`) – The number of repeated circuits, has a min. value of 1.
  *   **entanglement** (`Union`\[`str`, `List`\[`List`\[`int`]], `Callable`\[\[`int`], `List`\[`int`]]]) – Specifies the entanglement structure. Refer to [`NLocal`](qiskit.circuit.library.NLocal "qiskit.circuit.library.NLocal") for detail.
  *   **data\_map\_func** (`Optional`\[`Callable`\[\[`ndarray`], `float`]]) – A mapping function for data x.
  *   **insert\_barriers** (`bool`) – If True, barriers are inserted in between the evolution instructions and hadamard layers.

  **Raises**

  **ValueError** – If the feature dimension is smaller than 2.

  ## Attributes

  ### alpha

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.alpha">
    The Pauli rotation factor (alpha).

    **Return type**

    `float`

    **Returns**

    The Pauli rotation factor.
  </Attribute>

  ### ancillas

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.data" />

  ### entanglement

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.entanglement">
    Get the entanglement strategy.

    **Return type**

    `Union`\[`str`, `List`\[`str`], `List`\[`List`\[`str`]], `List`\[`int`], `List`\[`List`\[`int`]], `List`\[`List`\[`List`\[`int`]]], `List`\[`List`\[`List`\[`List`\[`int`]]]], `Callable`\[\[`int`], `str`], `Callable`\[\[`int`], `List`\[`List`\[`int`]]]]

    **Returns**

    The entanglement strategy, see `get_entangler_map()` for more detail on how the format is interpreted.
  </Attribute>

  ### entanglement\_blocks

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.entanglement_blocks" />

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.extension_lib" attributeValue="'include &#x22;qelib1.inc&#x22;;'" />

  ### feature\_dimension

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.feature_dimension">
    Returns the feature dimension (which is equal to the number of qubits).

    **Return type**

    `int`

    **Returns**

    The feature dimension of this feature map.
  </Attribute>

  ### global\_phase

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.header" attributeValue="'OPENQASM 2.0;'" />

  ### initial\_state

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.initial_state">
    Return the initial state that is added in front of the n-local circuit.

    **Return type**

    `Any`

    **Returns**

    The initial state.
  </Attribute>

  ### insert\_barriers

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.insert_barriers">
    If barriers are inserted in between the layers or not.

    **Return type**

    `bool`

    **Returns**

    True, if barriers are inserted in between the layers, False if not.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.instances" attributeValue="16" />

  ### metadata

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_layers

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.num_layers">
    Return the number of layers in the n-local circuit.

    **Return type**

    `int`

    **Returns**

    The number of layers in the circuit.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.num_parameters">
    **Return type**

    `int`
  </Attribute>

  ### num\_parameters\_settable

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.num_parameters_settable">
    The number of distinct parameters.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.num_qubits">
    Returns the number of qubits in this circuit.

    **Return type**

    `int`

    **Returns**

    The number of qubits.
  </Attribute>

  ### ordered\_parameters

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.ordered_parameters">
    The parameters used in the underlying circuit.

    This includes float values and duplicates.

    **Examples**

    ```python
    >>> # prepare circuit ...
    >>> print(nlocal)
         ┌───────┐┌──────────┐┌──────────┐┌──────────┐
    q_0: ┤ Ry(1) ├┤ Ry(θ[1]) ├┤ Ry(θ[1]) ├┤ Ry(θ[3]) ├
         └───────┘└──────────┘└──────────┘└──────────┘
    >>> nlocal.parameters
    {Parameter(θ[1]), Parameter(θ[3])}
    >>> nlocal.ordered_parameters
    [1, Parameter(θ[1]), Parameter(θ[1]), Parameter(θ[3])]
    ```

    **Return type**

    `List`\[`Parameter`]

    **Returns**

    The parameters objects used in the circuit.
  </Attribute>

  ### parameter\_bounds

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.parameter_bounds">
    The parameter bounds for the unbound parameters in the circuit.

    **Return type**

    `Optional`\[`List`\[`Tuple`\[`float`, `float`]]]

    **Returns**

    A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If None is returned, problem is fully unbounded.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.parameters">
    **Return type**

    `ParameterView`
  </Attribute>

  ### paulis

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.paulis">
    The Pauli strings used in the entanglement of the qubits.

    **Return type**

    `List`\[`str`]

    **Returns**

    The Pauli strings as list.
  </Attribute>

  ### preferred\_init\_points

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.preferred_init_points">
    The initial points for the parameters. Can be stored as initial guess in optimization.

    **Return type**

    `Optional`\[`List`\[`float`]]

    **Returns**

    The initial values for the parameters, or None, if none have been set.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.prefix" attributeValue="'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>

  ### reps

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.reps">
    The number of times rotation and entanglement block are repeated.

    **Return type**

    `int`

    **Returns**

    The number of repetitions.
  </Attribute>

  ### rotation\_blocks

  <Attribute id="qiskit.circuit.library.ZZFeatureMap.rotation_blocks">
    The blocks in the rotation layers.

    **Return type**

    `List`\[`Instruction`]

    **Returns**

    The blocks in the rotation layers.
  </Attribute>
</Class>

